updated config files to new scheme

--- a/examples/SpectralMethod/EshelbyInclusion/config/thermal.config
+++ b/examples/SpectralMethod/EshelbyInclusion/config/thermal.config
@@ -1,3 +1,5 @@
-reference_temperature   300.0
+heatflux                joule
+(output)                temperature
+thermal_conductivity    1
 specific_heat           1
 mass_density            1
