--- a/examples/SpectralMethod/EshelbyInclusion/config/thermalExpansion_Ti.config
+++ b/examples/SpectralMethod/EshelbyInclusion/config/thermalExpansion_Ti.config
@@ -1,4 +1,5 @@
 (kinematics)            thermal_expansion
+reference_temperature   300.0
 thermal_expansion11     9.5e-6
 thermal_expansion22     9.5e-6
 thermal_expansion33     5.6e-6
