--- a/examples/SpectralMethod/EshelbyInclusion/config/thermalExpansion_isotropic.config
+++ b/examples/SpectralMethod/EshelbyInclusion/config/thermalExpansion_isotropic.config
@@ -1,5 +1,8 @@
 (kinematics)            thermal_expansion
+reference_temperature   300.0
 thermal_expansion11     10e-6
+thermal_expansion22     10e-6
+thermal_expansion33     10e-6
 
 (source)                thermal_externalheat
 externalheat_time       0 500 500.001 1000        # 500 secs supplying 1 Watt, then removing 1 Watt
