--- a/examples/SpectralMethod/EshelbyInclusion/material.config
+++ b/examples/SpectralMethod/EshelbyInclusion/material.config
@@ -3,11 +3,10 @@
 #-------------------#
 
 [direct]
-mech	none                               # isostrain 1 grain
+mech	none                             # isostrain 1 grain
 
-thermal                 adiabatic        # thermal strain (stress) induced mass transport
-initialT                300.0
-(output)                temperature
+thermal                 conduction       # thermal strain (stress) induced mass transport
+(output)                avgtemperature
 
 #-------------------#
 <crystallite>
